# abacus

./: .gitignore  Abacus.py  Accounts.py  CLAUDE.md  CSVParser.py  CSV_Parser.py  Grapher.py  Helpers.py  README.md  TASKS.md  View.py  abacus.py  assignations.csv  benchmark_monte_carlo.py  csv_parser.py  parallel_monte_carlo_example.py  pyproject.toml  requirements.txt
accounting/: Account.py  AccountsList.py  CIBC.py  CapitalOne.py  DesjardinsMC.py  DesjardinsOP.py  DesjardinsPR.py  Paypal.py  VisaPP.py  __init__.py  account_list.py  config_template.yaml  forecast_strategies.py  plotting.py  prediction_strategies.py
accounts/: Account.py  Accounts.py  CIBC.py  CapitalOne.py  DesjardinsMC.py  DesjardinsOP.py  DesjardinsPR.py  Paypal.py  VisaPP.py  __init__.py
backend/: __init__.py  account.py  account_list.py  config_template.yaml  forecast_strategies.py  plotting.py
bots/: cibc_bot.py  desjardins_bot.py  nationalbank_ind_bot.py  paypal_bot.py  wealthsimple_bot.py
bots/web_driver/: notes.txt
data/: assignations.csv
frontend/: __main__.py  accounts_ui.py  assignations_ui.py  breakdown_ui.py  dashboard.py  forecast_ui.py  gui_config.py  history_ui.py  i18n.py  profiles_ui.py  transactions_ui.py
helpers/: helpers.py
tests/: Accounts_Tests.py  accounts_tests.py  helpers_tests.py  test_accounting_module.py
utils/: datetime_utils.py  path_utils.py  period_utils.py  utils.py
web_ui/: __main__.py  accounts_ui.py  assignations_ui.py  breakdown_ui.py  dashboard.py  forecast_ui.py  gui_config.py  history_ui.py  profiles_ui.py  transactions_ui.py
(+6 files in other folders)
