[project]
name = "abacus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "antlr4-python3-runtime>=4.9.3",
    "colorama>=0.4.6",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "dash>=4.1.0",
    "fonttools>=4.62.1",
    "kiwisolver>=1.5.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "omegaconf>=2.3.0",
    "packaging>=26.2",
    "pandas>=3.0.3",
    "pandas-stubs>=3.0.0.260204",
    "pillow>=12.2.0",
    "plotly>=6.7.0",
    "pyparsing>=3.3.2",
    "pyperclip>=1.11.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2026.2",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "selenium>=4.43.0",
    "selenium-stealth>=1.0.6",
    "six>=1.17.0",
    "tqdm>=4.67.3",
    "tzdata>=2026.2",
    "undetected-chromedriver>=3.5.5",
]
